# ChangeLog for mail-mta/ssmtp
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-mta/ssmtp/ChangeLog,v 1.47 2008/06/10 20:14:06 dertobi123 Exp $

*ssmtp-2.62 (10 Jun 2008)

  10 Jun 2008; Tobias Scherbaum <dertobi123@gentoo.org> +ssmtp-2.62.ebuild:
  Version bump, restrict access to ssmtp.conf (#187841), drop mailwrapper
  support (#222157), drop needless virtual/libc dependency (#211886),
  upstream fixed date header creation on uclibc (#145456)

  06 Jan 2007; Fernando J. Pereda <ferdy@gentoo.org> -ssmtp-2.61.ebuild:
  QA: Clean unused versions.

  04 Dec 2006; Alexander H. Færøy <eroyf@gentoo.org> ssmtp-2.61-r2.ebuild:
  Stable on MIPS; bug #127592

  22 Oct 2006; Andrej Kacian <ticho@gentoo.org> -files/starttls.diff,
  -ssmtp-2.60.7-r1.ebuild, -ssmtp-2.60.9.ebuild, ssmtp-2.61.ebuild,
  ssmtp-2.61-r2.ebuild, ssmtp-2.61-r30.ebuild, ssmtp-2.61-r31.ebuild:
  Modified Makefile to respect LDFLAGS, bug #152197 by Fabian Groffen <grobian
  at gentoo.org>. Removed old ebuilds.

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> ssmtp-2.61-r2.ebuild,
  ssmtp-2.61-r30.ebuild, ssmtp-2.61-r31.ebuild:
  Added ~sparc-fbsd keyword.

  12 Oct 2006; Fernando J. Pereda <ferdy@gentoo.org> ssmtp-2.61-r2.ebuild:
  Stable on alpha as per bug #127592

  01 Oct 2006; Jeroen Roovers <jer@gentoo.org> ssmtp-2.61-r2.ebuild:
  Stable for HPPA (bug #127592).

  26 Sep 2006; Gustavo Zacarias <gustavoz@gentoo.org> ssmtp-2.61-r2.ebuild:
  Stable on sparc wrt #127592

  24 Sep 2006; Michael Hanselmann <hansmi@gentoo.org> ssmtp-2.61-r2.ebuild:
  Stable on ppc.

  22 Sep 2006; Chris Gianelloni <wolf31o2@gentoo.org> ssmtp-2.61-r2.ebuild:
  Stable on x86/amd64 wrt bug #127592.

  22 Sep 2006; Markus Rothe <corsair@gentoo.org> ssmtp-2.61-r2.ebuild:
  Stable on ppc64; bug #127592

  10 May 2006; Fernando J. Pereda <ferdy@gentoo.org> ssmtp-2.61-r31.ebuild:
  Also install /usr/sbin/sendmail when USE=-mailwrapper. See bug #132941
