@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/ssmtp/ssmtp-2.62.ebuild,v 1.1 2008/06/10 20:14:06 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/ssmtp/ssmtp-2.62.ebuild,v 1.4 2008/06/11 18:00:53 dertobi123 Exp $
 
 EAPI="prefix"
 
@@ -16,6 +16,10 @@ KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
 IUSE="ssl ipv6 md5sum"
 
 DEPEND="ssl? ( dev-libs/openssl )"
+RDEPEND="${DEPEND}
+	!net-mail/mailwrapper
+	!virtual/mta"
+PROVIDE="virtual/mta"
 
 S="${WORKDIR}/${PN}"
 
